--- a/gui/templates/panorama.html
+++ b/gui/templates/panorama.html
@@ -12,6 +12,14 @@
         <div class="wrap">
 
           <div id="main">
+            <div id="breadcrumbs">
+              <ul>
+                <li><a href="{% url 'gui:home' %}">Inicio</a></li>
+                <li class="sep">/</li>
+                <li>Panorama Regional »</li>
+              </ul>
+              <div class="clearfix"></div>
+            </div>
             <h1 class="archive-title">Panorama Regional</h1>
             <section class="entry text-gris" style="margin-left:20px;">
               El Panorama Regional ofrece un resumen de la situación económica y laboral de la región a partir de múltiples fuentes de información e indicadores. Se divide en 4 secciones: una sección que describe la situación económica en términos generales, una sección de empresas, una sección de trabajadores y empleo, y una sección de grupos prioritarios. 
