--- a/gui/templates/technicalCommitte.html
+++ b/gui/templates/technicalCommitte.html
@@ -5,6 +5,9 @@
 Comité Técnico | Observatorio Laboral Aysen
 {% endblock title %}
 
+{% block head %}
+<script src="{% static 'gui/js/about.js' %}"></script>
+{% endblock head %}
 
 {% block content_about %}
 <div id="main">
