--- a/gui/templates/advice.html
+++ b/gui/templates/advice.html
@@ -6,7 +6,7 @@ Consejo Asesor | Observatorio Laboral Aysen
 {% endblock title %}
 
 {% block head %}
-<script src="{% static 'gui/js/advice.js' %}"></script>
+<script src="{% static 'gui/js/about.js' %}"></script>
 {% endblock head %}
 
 {% block content_about %}
